# pathfinders

./: .gitignore  .gitmodules  README.md
docs/: bill_of_materials.md  mobility_management.md  power_and_sense_management.md
models/: base-base.stl  base-plate-mount.stl  base-plate.stl  base.stl  cam.stl  camera-mount.stl  camera-stand.stl  front-ultrasonic-mount.stl  left-ultrasonic-mount.stl  mainBoard.stl  right-ultrasonic-mount.stl  stand.stl  top-plate-mount.stl  top-plate.stl
schemes/: README.md
src/: wro_world.sdf
src/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_ws/log/: latest_build  latest_list
src/ros2_ws/src/wro_project/: package.xml  setup.cfg  setup.py
src/wro_v2/ultrasonic_pid/: round_one.ino
src/wro_ws/: default_map.data
src/wro_ws/map/: default_map.pgm  default_map.yaml  map_save.pgm  map_save.yaml  map_serialize.data
src/wro_ws/src/robot_description/: CMakeLists.txt  bicdrive_arduino.xml  package.xml
src/wro_ws/src/robot_description/config/: controllers.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml
src/wro_ws/src/robot_description/hardware/: carlikebot_system.cpp
src/wro_ws/src/robot_description/hardware/include/bicdrive_arduino/: arduino_comms.hpp  carlikebot_system.hpp  steering.hpp  traction.hpp
src/wro_ws/src/robot_description/launch/: display.launch.py  launch_sim.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  physical_robot.launch.py  rsp.launch.py
src/wro_ws/src/robot_description/models/wro_ground/: model.sdf
src/wro_ws/src/robot_description/urdf/: colors.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  physical_robot.urdf  physical_robot_core.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_2.xacro  ros2_control_ack.xacro  ros2_control_bic.xacro
src/wro_ws/src/robot_description/urdf/diff_drive/: final_bot.urdf.xacro
src/wro_ws/src/robot_description/worlds/: gazebo_wro_world.sdf  ignition_wro_world.sdf
src/wro_ws/src/sensors/camera/: CMakeLists.txt  package.xml
src/wro_ws/src/sensors/rplidar/: CMakeLists.txt  package.xml
src/wro_ws/src/simulation/: CMakeLists.txt  package.xml
t-photos/: README.md
v-photos/: README.md
(+46 files in other folders)
